assets/css/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

html, body{
    width: 100%;
}

:focus {outline:none;}
::-moz-focus-inner {border:0;}

#newForm, #editModal {
    width: 80%;
    margin: 0 auto;
}

.idHolder, .inactive {
    display: none;
}

.hide {
    visibility: hidden;
    margin: 0 auto;
    margin-bottom: 20px;
}

.show {
     visibility: visible;
     font-size: 14px;
}

.blur{
    -webkit-filter: blur(5px); 
    filter: blur(5px); 
}

#content, #newForm, #editModal, #todoContainer, .todo, .description {
    box-sizing: border-box;
}

#errorEdit, #errorNew {
    z-index: 99;
    position: absolute;
    text-align: center;;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    text-align: center;
    border-radius: 5px;
    border: 2px solid rgb(224, 15, 15);
    background-color: rgb(245, 245, 245);
    top: 30%;
    height: 20%;
    width: 50%;
}

#errorNewMsg, #errorEditMsg {
    margin-left: 10px;
    margin-right: 10px;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    font-family: 'Oxanium', cursive;
    font-size: 18px;
}

#errorEditOk, #errorNewOk {
    position: absolute;
    width: 56px;
    height: 29px;
    background-color: aquamarine;
    border-radius: 5px;
    margin-left: -28px;
    top: 75%; 
}

#content {
    overflow: auto;
    overflow-y: scroll;
    padding-bottom: 20px;
}

header{
    font-size: 65px;
    margin-top: 10px;
    font-family: 'Oxanium', cursive;
    color: aquamarine;
    text-shadow: 2px 3px 4px aqua;
    font-style: italic;
    text-align: center;
}

.todoContainer {
    width: 100%;
    display:flex;
    justify-content: space-evenly;
    align-items: baseline; 
    margin: 0 auto;
    margin-top: 35px;
}

#clear{
    margin-top: 50px;
    text-align: center;
}

.todo {
    margin: 0;
    overflow-wrap: break-word;
    width: 80%;
    border: solid aquamarine 2px;
    border-radius: 5px;
    font-size: 20px;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    background-color:  aliceblue;
} 

.deleteBtn {
    color: black;
    padding: 5px;
    padding-left: 0px;
    align-self: center;
}

.title, .dueDate, .priority, .description,.editBtn {
    padding: 5px;
    margin: 5px;
}


.title {
    word-break: break-all;
    width: fit-content;
    font-family: 'Rokkitt', serif;
    align-self: center;
    font-size: 20px;
}

.dueDate {
    width: fit-content;
    height: 100%;
    background-color: aquamarine;
    border-radius: 10px;
    opacity: 0.75;
    font-family: 'Oxanium', cursive;
    font-size: 15px;
    align-self: center;
}

.priority {
 display: none;
}

.showDescription {
    padding: 5px;
    align-self: center;
    color: aquamarine;
}

#newTodo{
    position: absolute;
    top: 5px;
    right: 5px;
    border-radius: 10px;
    border: 2px solid aqua;
    margin: 5px;
    padding: 5px;
    background-color: aquamarine;
    font-size: 15px;
}

.setOpacity{
    opacity: 0.75;

}

#newForm, #editModal {
    text-align: left;
    margin-top: 30px;
    padding: 20px;
    border: 1px solid rgb(207, 202, 202);
    border-radius: 5px;
}

input, textarea, select {
    width: 100%;
    margin: 20px;
    margin-left: 0px;
    margin-right: 0px;
    padding: 0px;
    border: 1px solid rgb(207, 202, 202);
    font-family: 'Rokkitt', serif;
    font-size: 20px;
    border-radius: 3px;
}

input, textarea {
    padding: 10px; 
    box-sizing: border-box;
}

input, select{
    height: 35px !important;
}

textarea {
    height: 65px;
    resize: none;
}

input, select {
    background-color: white;
}

#saveNew, #saveEdit {
    margin-right: 10px;
    background-color: aqua;
    border-radius: 2px;
}

.btnContainer {
    text-align: right;
}

#cancelNew, #cancelEdit {
    background-color: rgb(240, 231, 231);
}

.buttonContainer {
    text-align: center;
    margin-top: 30px;
}

#saveNew, #cancelNew, #saveEdit, #cancelEdit{
    border-radius: 10px;
    padding: 10px;
    padding: 5px;
    padding-left: 9px;
    padding-right: 9px;
}

#saveNew, #cancelNew, #newTodo, #saveEdit, #cancelEdit {
    font-family: 'Oxanium', cursive;
    font-size: 15px;
}

.btnHover:hover {
    opacity: 0.6;
}

input:focus, textarea:focus, select:focus{
    border: 2px solid aqua;
    box-shadow: 0 0 9px aqua;
}

label {
    font-family: 'Rokkitt', serif;
    font-size: 20px;
    font-weight: bold;
}

.red {
    background-color: rgb(224, 15, 15);
    color: white;
}

.yellow {
    background-color:rgb(236, 236, 12);
}

.green {
    background-color:aquamarine;
}

.description {
    font-family: 'Rokkitt', serif;
    font-size: 19px;
    width: 100%;
    margin: 0 auto;
    padding: 10px;
    border-top: 1px solid rgb(207, 202, 202);;
    word-wrap: break-word;
    flex-flow: row wrap;
    flex-wrap: wrap;
}

.editBtn{
    margin: 0px;
    align-self: center;
}

.firstLine {
    width: 100%;
    text-align: center;;
    display:flex;
    justify-content: space-evenly;
    align-items: baseline; 
    margin: 0 auto;
}

select {
    padding-left: 6.5px;
}

.fa-minus {
    color: red;
}

@media screen and (max-width: 478px) {
    #content {
        text-align: center;
    }
    .description {
        text-align: left;
    }
    #newTodo {
        position: relative;
        margin-top: 15px;
    }
}

@media screen and (max-width: 800px) {
    .todo {
        width: 70%;
    }

}
@media screen and (max-width: 1000px) {
    .dueDate {
        margin: 0 auto;
        text-align: center;
        margin-bottom: 10px;
    }
    .title {
        width: 100%;
        text-align: center;
    }
}

